# elite-qualifier

./: data.pickle  intents.json  main.py  pyproject.toml  readme.md
.github/workflows/: ci.yml
