[tool.poetry]
name = "repl_python3_Chatbot"
version = "0.1.0"
description = ""
authors = ["SophiNewell <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colored = "^1.4.2"
tensorflow = "^2.6.0"
tflearn = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
